--- a/P16_Jenkins_WebApp1/src/main/webapp/index.html
+++ b/P16_Jenkins_WebApp1/src/main/webapp/index.html
@@ -5,7 +5,8 @@
 <title>Date App</title>
 </head>
 <body>
-    <h1 style="text-align:center; color:red;">Click the below show date button to view date</h1>
-    <b><i><a href="dateurl">Show Date</a></i></b>
+    <h1 style="text-align:center; color:red;">Jenkins Project Testing with PollSCM</h1>
+    <h2 style="text-align:center; color:green;">Click the below show date button to view date</h2>
+    <b><i><a href="dateurl">Show Date and Time</a></i></b>
 </body>
 </html>
